test/error/ConstIntAggregateInitializer.fu
public static class Test
{
	public static bool Run()
	{
		const int c = { 5, 10 }; //ERROR: Array initializer for scalar constant 'c'
		return true;
	}
}
